--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+    Copyright 2019
+-->
 <head>
 	<title>An example title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
