--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!--
+  Adding changes before rebase conflicts
+-->
 <head>
 	<title></title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
