fb adding some trouble to sim html

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 
 <!--
-  Adding changes before rebase conflicts
-  Some silly changes from master 
+  This changes are different from the feature branch big trouble
 -->
 <head>
-	<title>Silly changes on master</title>
+	<title>Lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,8 +18,7 @@
 	<main class="container">
 	<!-- Just a container  -->
 		<p>
-			Just stuff for now
-			Not sure if we replace it
+			Just nothing but trouble
 		</p>
 	</main>
 	<footer class="container">
