mb conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,10 @@
 
 <!--
   Adding changes before rebase conflicts
+  Some silly changes from master 
 -->
 <head>
-	<title></title>
+	<title>Silly changes on master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +17,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Just a container  -->
 		<p>
-			Just some content
+			Just stuff for now
+			Not sure if we replace it
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>Jayson Taylor</p>
 	</footer>
 </body>
 </html>
