adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <!--
-  This changes are different from the feature branch big trouble
+  This changes are different from the 
 -->
 <head>
-	<title>Lots of trouble</title>
+	<title>Lots of trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
