local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -27,7 +27,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>Jayson Taylor</p>
+		<p>2014 git training all rights reserved</p>
 	</footer>
 </body>
 </html>
