--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@
     Copyright 2019
 -->
 <head>
-	<title>Lots of trouble, in a little repo</title>
+	<title>Update Title for stash</title>
 	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -22,8 +22,7 @@
 	<main class="container">
 	<!-- Just a container  -->
 		<p>
-			Just nothing but trouble
-			Something interesting
+			Add more content
 		</p>
 	</main>
 	<footer class="container">
