Changes after git stash branch

--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@
     Copyright 2019
 -->
 <head>
-	<title>Update Title for stash</title>
+	<title>Update Title for stash branch example</title>
 	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
